T Compiler/tests/phase3tests/error/circularExtends.t
class A extends D
{
  int i;
}

class B extends A
{
  int j;
}

class C extends B
{
  int k;
}

class D extends C
{
  int l;
}

int main()
{
}
